Updated to add more words

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <div class="toggle">
       <label for="setSelect">Select Set:</label>
       <select id="setSelect">
-        <option value="words">Common Words</option>
+        <option value="words">Everday Words</option>
         <option value="phrases">Common Phrases</option>
+        <option value="pronouns">Pronouns</option>
+        <option value="adjectives">Adjectives</option>
+        <option value="verbs">Verbs</option>
+        <option value="time">Time</option>
+        <option value="food">Food</option>
+        <option value="chineseBakery">Chinese Bakery</option>
+        <option value="beverages">Beverages</option>
+        <option value="house">House</option>
+        <option value="kitchen">Kitchen</option>
       </select>
     </div>
 
